feat: create employees assigned to a restaurant
