# src/main/java/com/pragma/powerup/domain/api/IUserServicePort.java
@@ -4,5 +4,8 @@ import com.pragma.powerup.domain.model.User;
 
 public interface IUserServicePort {
     User createOwner(User user);
+
+    User createEmployee(User user, Long roleId);
+
     User getUserById(Long userId);
 }
