# src/main/java/com/pragma/powerup/domain/model/User.java
@@ -18,5 +18,6 @@ public class User {
     private String email;
     private String password;
     private Role role;
+    private Long restaurantId;
 
 }
